font color fixed
Part of website not visible on dark background

--- a/odinrecipe.css
+++ b/odinrecipe.css
@@ -24,6 +24,6 @@ div{
     font-size: 30px;
 }
 p{
-    color: rgb(226, 80, 43);
+    color: rgb(240, 235, 234);
     font-size: 25px;
 }
